Updates to app aesthetics

--- a/mobile-app/www/index.html
+++ b/mobile-app/www/index.html
@@ -32,20 +32,33 @@
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+        <link rel="stylesheet" href="theme/vendor/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/themes/default/jquery.mobile-1.4.5.min.css">
         <link rel="stylesheet" href="css/jquery.scrollz.css"/>
+        <link rel="stylesheet" href="theme/vendor/waves/waves.min.css">
+        <link rel="stylesheet" href="theme/vendor/wow/animate.css">
+        <link rel="stylesheet" href="theme/css/nativedroid2.css">
+        <link rel="stylesheet" href="theme/css/nativedroid2.color.amber.css">
         <link rel="stylesheet" type="text/css" href="css/index.css">
-        <script src="js/jquery.js"></script>
+        <script src="js/jquery.min.js"></script>
+        <script src="js/jquery-ui.min.js"></script>
         <script src="js/jquery.mobile-1.4.5.min.js"></script>
         <script src="js/jquery.scrollz.min.js"></script>
+        <script src="theme/vendor/waves/waves.min.js"></script>
+        <script src="theme/vendor/wow/wow.min.js"></script>
+        <script src="theme/js/nativedroid2.js"></script>
+        <script src="theme/nd2settings.js"></script>
         <title>Summon</title>
     </head>
     <body>
         <div data-role="page" data-theme="a">
-            <div data-role="header" data-position="fixed">
-                <a href="#panel" id="gear" data-icon="bars" data-iconpos="notext" data-role="button"></a>
-                <h3>Summon</h3>
-                <a id="count">0</a>
+            <div data-role="header" data-position="fixed" class="wow fadeInDown" data-wow-delay="0.2s">
+                <a href="#panel" class="ui-btn ui-btn-left wow fadeIn" data-wow-delay='0.8s'><i class="zmdi zmdi-menu"></i></a>
+                <!-- <a id="count">0</a> -->
+                <h1 class="wow fadeIn" data-wow-delay='0.4s'>Summon</h1>
             </div>
             <div data-role="content" style="padding:0; overflow-y:visible; min-height:800px !important;">
                 <div role="main" class="ui-content" id="list" data-scrollz="pull">
@@ -63,10 +76,10 @@
                     <a href="#" class="ui-btn ui-corner-all ui-shadow" id="go">Open</a>
                 </div>
             </div>
-            <div data-role="panel" id="panel" data-display="push">
+            <div data-role="panel" id="panel" data-display="overlay" data-position-fixed="true" style="width:272px">
                 <form>
-                    <div data-role="header"><h3>Settings</h3></div>
-                    <ul data-role="listview">
+                    <h3 style="padding:10px">Settings</h3>
+                    <ul data-role="listview" data-icon="false">
                         <li><label for="bg">Operate in background:</label><input type="checkbox" class="pref" id="bg" name="bg" data-role="flipswitch" disabled="disabled" /></li>
                         <li><button class="ui-shadow ui-btn ui-icon-carat-d ui-btn-icon-right" disabled="disabled">Permissions</button></li>
                         <li><table><tr><td><label for="dv">See Other Devices:</label></td><td><input type="checkbox" class="pref" id="dv" name="dv" data-role="flipswitch"/></td></tr></table></li>
