--- a/mobile-app/www/index.html
+++ b/mobile-app/www/index.html
@@ -37,46 +37,42 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
         <link rel="stylesheet" href="theme/vendor/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/themes/default/jquery.mobile-1.4.5.min.css">
-        <link rel="stylesheet" href="css/jquery.scrollz.css"/>
         <link rel="stylesheet" href="theme/vendor/waves/waves.min.css">
         <link rel="stylesheet" href="theme/vendor/wow/animate.css">
         <link rel="stylesheet" href="theme/css/nativedroid2.css">
         <link rel="stylesheet" href="theme/css/nativedroid2.color.amber.css">
         <link rel="stylesheet" type="text/css" href="css/index.css">
-        <script src="js/jquery.min.js"></script>
-        <script src="js/jquery-ui.min.js"></script>
-        <script src="js/jquery.mobile-1.4.5.min.js"></script>
-        <script src="js/jquery.scrollz.min.js"></script>
-        <script src="theme/vendor/waves/waves.min.js"></script>
-        <script src="theme/vendor/wow/wow.min.js"></script>
-        <script src="theme/js/nativedroid2.js"></script>
-        <script src="theme/nd2settings.js"></script>
         <title>Summon</title>
     </head>
     <body>
-        <div data-role="page" data-theme="a">
+        <div data-role="page" data-theme="a" class="wow fadeIn" data-wow-delay="0.2s">
             <div data-role="header" data-position="fixed" class="wow fadeInDown" data-wow-delay="0.2s">
                 <a href="#panel" class="ui-btn ui-btn-left wow fadeIn" data-wow-delay='0.8s'><i class="zmdi zmdi-menu"></i></a>
-                <!-- <a id="count">0</a> -->
                 <h1 class="wow fadeIn" data-wow-delay='0.4s'>Summon</h1>
             </div>
-            <div data-role="content" style="padding:0; overflow-y:visible; min-height:800px !important;">
-                <div role="main" class="ui-content" id="list" data-scrollz="pull">
-                    <ul data-role="listview" data-inset="false" data-split-icon="info" id="devs"></ul>
+            <div data-role="content" style="padding:0; overflow:visible">
+                <div id="ptr">
+                    <span class="zmdi zmdi-arrow-forward"></span>
+                    <div class="loading"><!--<span class="fa fa-refresh fa-spin"></span>--></div>
+                </div>
+                <div role="main" class="ui-content" id="content" style="overflow:visible;">
+                    <div id="list">
+                        <ul data-role="listview" data-split-icon="info" id="devs"></ul>
+                    </div>
                 </div>
             </div>
             <div data-role="popup" id="dialog" data-overlay-theme="b">
                 <div data-role="header" id="dh">
-                    <img style="float:left; display:inline; height:30px; max-width:30px; padding:5px;">
+                    <img class="ui-btn ui-btn-left" style="-webkit-filter:drop-shadow(1px 1px 0 #eee8)">
                     <h3></h3>
-                    <a href="#" data-icon="delete" data-iconpos="notext" data-rel="back" class="ui-btn-right"></a>
+                    <a href="#" class="ui-btn ui-btn-right wow fadeIn" data-wow-delay='0.8s' data-rel="back"><i class="zmdi zmdi-close"></i></a>
                 </div>
                 <div role="main" class="ui-content" id="dm" style="word-wrap: break-word;">
                     <p></p><br />
-                    <a href="#" class="ui-btn ui-corner-all ui-shadow" id="go">Open</a>
+                    <a href="#" class="ui-btn ui-btn-raised clr-primary" id="go">Open</a>
                 </div>
             </div>
-            <div data-role="panel" id="panel" data-display="overlay" data-position-fixed="true" style="width:272px">
+            <div data-role="panel" id="panel" data-display="reveal" data-position-fixed="true" style="width:272px">
                 <form>
                     <h3 style="padding:10px">Settings</h3>
                     <ul data-role="listview" data-icon="false">
@@ -87,6 +83,15 @@
                 </form>
             </div>
         </div>
+        <script src="js/jquery.min.js"></script>
+        <script src="js/jquery-ui.min.js"></script>
+        <script src="js/jquery.mobile-1.4.5.min.js"></script>
+        <script src="js/hammer.2.0.4.js"></script>
+        <script src="js/wptr.1.1.js"></script>
+        <script src="theme/vendor/waves/waves.min.js"></script>
+        <script src="theme/vendor/wow/wow.min.js"></script>
+        <script src="theme/js/nativedroid2.js"></script>
+        <script src="theme/nd2settings.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
