Add support for cached UIs

--- a/mobile-app/www/index.html
+++ b/mobile-app/www/index.html
@@ -72,11 +72,11 @@
                     <a href="#" class="ui-btn ui-btn-raised clr-primary" id="go">Open</a>
                 </div>
             </div>
-            <div data-role="panel" id="panel" data-display="reveal" data-position-fixed="true" style="width:272px">
+            <div data-role="panel" id="panel" data-display="reveal" data-position-fixed="true" style="width:272px; color:#888">
                 <form>
-                    <h3 style="padding:10px">Settings</h3>
+                    <h3 style="padding:20px">Settings</h3>
                     <ul data-role="listview" data-icon="false">
-                        <li><label for="bg">Operate in background:</label><input type="checkbox" class="pref" id="bg" name="bg" data-role="flipswitch" disabled="disabled" /></li>
+                        <li><table><tr><td><label for="bg">Operate in background:</label></td><td><input type="checkbox" class="pref" id="bg" name="bg" data-role="flipswitch" disabled="disabled" /></td></tr></table></li>
                         <li><button class="ui-shadow ui-btn ui-icon-carat-d ui-btn-icon-right" disabled="disabled">Permissions</button></li>
                         <li><table><tr><td><label for="dv">See Other Devices:</label></td><td><input type="checkbox" class="pref" id="dv" name="dv" data-role="flipswitch"/></td></tr></table></li>
                     </ul>
