Add support for auto-generated UI

--- a/mobile-app/www/index.html
+++ b/mobile-app/www/index.html
@@ -69,7 +69,8 @@
                 </div>
                 <div role="main" class="ui-content" id="dm" style="word-wrap: break-word;">
                     <p></p><br />
-                    <a href="#" class="ui-btn ui-btn-raised clr-primary" id="go">Open</a>
+                    <a href="#" class="ui-btn ui-btn-raised clr-primary" id="go">Open</a><br />
+                    <a href="#" class="ui-btn ui-btn-raised" id="gen">Generate UI from BLE</a>
                 </div>
             </div>
             <div data-role="panel" id="panel" data-display="reveal" data-position-fixed="true" style="width:272px; color:#888">
