Add support for native apps and better looks for DNS-SD

--- a/mobile-app/www/index.html
+++ b/mobile-app/www/index.html
@@ -39,9 +39,12 @@
                     <a href="#" class="ui-btn ui-btn-right wow fadeIn" data-wow-delay='0s' data-rel="back"><i class="zmdi zmdi-close"></i></a>
                 </div>
                 <div role="main" id="dm">
-                    <p></p>
-                    <a href="#" class="ui-btn ui-btn-raised clr-primary" id="go">Open</a><br />
-                    <a href="#" class="ui-btn ui-btn-raised" id="gen">Generate UI from BLE</a>
+                    <p>
+                        <b>Device</b><br/><span id="dev"></span><br/><br/>
+                        <b>UI Options</b><br/><br/><span id="ui"></span>
+                        <a href="#" class="ui-btn ui-btn-raised clr-primary" id="go">Open</a>
+                        <a href="#" class="ui-btn ui-btn-raised" id="gen">Generate UI from BLE</a>
+                    </p>
                 </div>
             </div>
             <div data-role="panel" id="panel" data-display="reveal" data-position-fixed="true">
