--- a/mobile-app/www/index.html
+++ b/mobile-app/www/index.html
@@ -58,8 +58,8 @@
                 <form>
                     <h3>Settings</h3>
                     <ul data-role="listview" data-icon="false">
-                        <li><button class="ui-shadow ui-btn" href="#" onclick="window.gateway.clearCache()" disabled="disabled">Clear Cache</button></li>
-                        <li><table><tr><td><label for="dv">See Other Devices:</label></td><td><input type="checkbox" class="pref" id="dv" name="dv" data-role="flipswitch" value="true"/></td></tr></table></li>
+                        <li><table><tr><td><label for="dv">See Other Devices:</label></td><td><input type="checkbox" class="pref" id="dv" name="dv" data-role="flipswitch"/></td></tr></table></li>
+                        <li><table><tr><td><label for="ch">Allow Caching:    </label></td><td><input type="checkbox" class="pref" id="ch" name="ch" data-role="flipswitch"/></td></tr></table></li>
                     </ul>
                 </form>
             </div>
