Add basic search functionality

--- a/mobile-app/www/index.html
+++ b/mobile-app/www/index.html
@@ -20,8 +20,8 @@
     <div data-role="page" id="page1">
       <div data-role="header" data-position="fixed" data-tap-toggle="false" class="ph">
         <a href="#panel" class="ui-btn ui-btn-left"><i class="zmdi zmdi-menu zmd-lg"></i></a>
-        <h1>Summon<!--<form class="ui-filterable"><input id="filter" data-type="search"></form>--></h1>
-        <!--<a href="#panel" class="ui-btn ui-btn-left"><i class="zmdi zmdi-menu zmd-lg"></i></a>-->
+        <h1><form class="ui-filterable"><input id="filter" data-type="search" placeholder="Summon" data-role="none" data-clear-btn="true"></form></h1>
+        <a href="#" id="pr" class="ui-btn ui-btn-right"><i class="zmdi zmdi-search zmd-lg"></i></a>
       </div>
       <div data-role="content">
         <div role="main" id="content">
