Minor aesthetic changes

--- a/mobile-app/www/index.html
+++ b/mobile-app/www/index.html
@@ -82,7 +82,7 @@
     <script src="theme/vendor/wow/wow.min.js"></script>
     <script src="theme/js/nativedroid2.js"></script>
     <script src="theme/nd2settings.js"></script>
-    <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
+    <script src="cordova.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
