--- a/examples/cordova-apps/light/www/index.html
+++ b/examples/cordova-apps/light/www/index.html
@@ -22,19 +22,30 @@
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, width=device-width, target-densitydpi=device-dpi" />
         <link rel="icon" href="img/logo.png">
         <title>BLE Light</title>
         <style type="text/css">
+            html, body {height:100%; background:#eee; margin:0; text-align:center; overflow:hidden; white-space:nowrap;}
+            svg {height:calc(100% - 240px); margin:10px;}
+            h1 {font-family:'Helvetica Neue',sans-serif-thin; font-size:50px; line-height:1em; font-weight:100; color:#888; margin:30px 0;}
             .Dis {-webkit-filter: opacity(20%) grayscale(100%);}
             .Off {-webkit-filter: grayscale(100%);}
         </style>
     </head>
-    <body style="text-align:center; font-family:sans-serif-thin; color:#888">
-        <h1 id="title">BBB2909 Light</h1>
-        <img src="img/bulb.png" name="bulb" class="Dis" style="width:100%; margin:20px 0;"/>
+    <body>
+        <h1 id="title">BLE Light</h1>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 538 932" name="bulb" class="Dis">
+            <g transform="matrix(1.25 0 0 -1.25 -4995.7 416.19) translate(0 2.2375)">
+              <path d="m4294.5-353.43c0-16.179-13.118-29.297-29.297-29.297h-107.25c-16.179 0-29.297 13.118-29.297 29.297v127.07c0 16.182 13.118 29.297 29.297 29.297h107.25c16.179 0 29.297-13.115 29.297-29.297v-127.07" fill="#bbb" />
+              <path d="m4304.6-256.89c0-8.3325-6.7554-15.088-15.088-15.088h-155.81c-8.3325 0-15.088 6.7553-15.088 15.088v4.3823c0 8.3325 6.7554 15.09 15.088 15.09h155.81c8.3325 0 15.088-6.7578 15.088-15.09v-4.3823" fill="#777" />
+              <path d="m4304.6-304.64c0-8.3324-6.7554-15.09-15.088-15.09h-155.81c-8.3325 0-15.088 6.7578-15.088 15.09v4.3823c0 8.3325 6.7554 15.088 15.088 15.088h155.81c8.3325 0 15.088-6.7553 15.088-15.088v-4.3823" fill="#777" />
+              <path d="m4304.6-351.48c0-8.3325-6.7554-15.09-15.088-15.09h-155.81c-8.3325 0-15.088 6.7578-15.088 15.09v4.3823c0 8.3325 6.7554 15.09 15.088 15.09h155.81c8.3325 0 15.088-6.7578 15.088-15.09v-4.3823" fill="#777" />
+              <path d="m4160.9-382.72c9.4263-19.197 28.601-32.348 50.737-32.348s41.311 13.152 50.734 32.348h-101.47" fill="#777" />
+              <path d="m4426.6 115.69c0 118.75-96.266 215.02-215.02 215.02s-215.02-96.269-215.02-215.02c0-42.082 12.1-81.332 32.995-114.48l-0.025-0.002c53.779-92.99 73.059-106.95 73.059-161.02 0-41.914 15.51-60.358 42.754-60.358h66.225 66.225c27.243 0 42.754 18.445 42.754 60.358 0 54.067 19.28 68.027 73.061 161.02l-0.025 0.002c20.893 33.152 32.993 72.402 32.993 114.48" fill="#fc0" />
+            </g>
+          </svg>
         <h1 id="console"></h1>
-        <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
