--- a/user-interfaces/examples/flappy/www/index.html
+++ b/user-interfaces/examples/flappy/www/index.html
@@ -5,6 +5,7 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1, width=device-width" />
+    <link rel="icon" href="bird.png">
     <summon request="bluetooth" />
     <title>Flappy</title>
     <style type="text/css">
