--- a/user-interfaces/examples/temperature/www/index.html
+++ b/user-interfaces/examples/temperature/www/index.html
@@ -1,22 +1,4 @@
 <!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
     <head>
         <meta charset="utf-8" />
@@ -24,13 +6,13 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="icon" href="img/icon.png">
+        <summon request="bluetooth"/>
         <title>Room Temperature</title>
         <style> * {transition:2s;} </style>
     </head>
     <body style="text-align:center; font-family:sans-serif-thin; background: rgb(0,96,255); color:rgba(230,230,230,.8);">
         <h1 id="title">Temperature</h1>
         <h1 id="console" style="margin: auto; position: absolute; top: 0; left: 0; bottom: 0; right: 0; height:200px; font-size:100pt;"></h1>
-        <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
