--- a/mobile-app/www/index.html
+++ b/mobile-app/www/index.html
@@ -46,7 +46,7 @@
         <form>
           <ul data-role="listview" data-icon="false">
             <li>Settings</li>
-            <li><select id="br" name="br" data-native-menu="false" disabled="true"><option value="bt">Browse All</option><option value="bt">Browse Bluetooth</option><option value="bt">Browse mDNS (Wi-Fi)</option></select></li>
+            <li><select id="br" name="br" data-native-menu="false"><option value="ba">Browse All</option><option value="bb">Browse Bluetooth</option><option value="bm">Browse mDNS (Wi-Fi)</option></select></li>
             <li><table><tr><td><label for="dv">See Other Devices:</label></td><td><input type="checkbox" class="pref" id="dv" name="dv" data-role="flipswitch"/></td></tr></table></li>
             <li><table><tr><td><label for="ch">Allow Caching:    </label></td><td><input type="checkbox" class="pref" id="ch" name="ch" data-role="flipswitch"/></td></tr></table></li>
             <li class="pa"><a href="https://github.com/lab11/summon"> Summon Project</a></li>
