Add aggregate view support

--- a/mobile-app/www/index.html
+++ b/mobile-app/www/index.html
@@ -35,11 +35,10 @@
           <a href="#" class="ui-btn ui-btn-right" data-rel="back"><i class="zmdi zmdi-close"></i></a>
         </div>
         <div role="main" id="dm">
-          <p>
-            <b>Device</b><br/><span id="dev"></span><br/><br/>
-            <b>Options</b><span id="ui"></span>
-            <a href="#page2" class="ui-btn ui-btn-raised" id="gen" data-transition="slide"></a>
-          </p>
+          <p id="url" style="font-size:12px"></p>
+          <b>Devices</b><ul id="dev" data-role="listview" data-icon="false" style="margin:0; padding:0"></ul><br />
+          <b>Options</b><span id="ui"></span>
+          <a href="#page2" class="ui-btn ui-btn-raised" id="gen" data-transition="slide"></a>
         </div>
       </div>
       <div data-role="panel" id="panel" data-display="reveal" data-position-fixed="true">
