Size adjustments for detail view

--- a/mobile-app/www/index.html
+++ b/mobile-app/www/index.html
@@ -35,7 +35,7 @@
           <a href="#" class="ui-btn ui-btn-right" data-rel="back"><i class="zmdi zmdi-close"></i></a>
         </div>
         <div role="main" id="dm">
-          <p id="url" style="font-size:12px"></p>
+          <p id="url"></p>
           <b>Devices</b><ul id="dev" data-role="listview" data-icon="false" style="margin:0; padding:0"></ul><br />
           <b>Options</b><span id="ui"></span>
         </div>
