Further adjustments to detail view and fix for release build runpath

--- a/mobile-app/www/index.html
+++ b/mobile-app/www/index.html
@@ -9,7 +9,6 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <link rel="stylesheet" href="css/themes/default/jquery.mobile-1.4.5.min.css">
-    <!-- <link rel="stylesheet" href="theme/vendor/wow/animate.css"> -->
     <link rel="stylesheet" href="theme/css/nativedroid2.css">
     <link rel="stylesheet" href="theme/css/nativedroid2.color.amber.css">
     <link rel="stylesheet" href="css/xpull.css">
@@ -34,9 +33,9 @@
           <h3></h3>
           <a href="#" class="ui-btn ui-btn-right" data-rel="back"><i class="zmdi zmdi-close"></i></a>
         </div>
-        <div role="main" id="dm">
-          <p id="url"></p>
-          <b>Devices</b><ul id="dev" data-role="listview" data-icon="false" style="margin:0; padding:0"></ul><br />
+        <div role="main" id="dm"><br/>
+          <b>URL</b><br/><span id="url"></span><br/><br/>
+          <b>Devices</b><ul id="dev" data-role="listview" data-icon="false"></ul><br/>
           <b>Options</b><span id="ui"></span>
         </div>
       </div>
