Add setting control for sorting

--- a/mobile-app/www/index.html
+++ b/mobile-app/www/index.html
@@ -44,6 +44,7 @@
           <ul data-role="listview" data-icon="false">
             <li>Settings</li>
             <li><select id="br" name="br" class="pref" data-native-menu="false"><option value="all">Browse All</option><option value="ble">Browse Bluetooth</option><option value="nsd">Browse mDNS (Wi-Fi)</option></select></li>
+            <li><select id="so" name="so" class="pref" data-native-menu="false"><option value="time">Sort by Time</option><option value="rssi">Sort by RSSI</option><option value="pplr">Sort by Popularity</option></select></li>
             <li><table><tr><td><label for="dv">See Other Devices:</label></td><td><input type="checkbox" class="pref" id="dv" name="dv" data-role="flipswitch"/></td></tr></table></li>
             <li><table><tr><td><label for="ch">Allow Caching:    </label></td><td><input type="checkbox" class="pref" id="ch" name="ch" data-role="flipswitch"/></td></tr></table></li>
             <li class="pa"><a href="https://github.com/lab11/summon"> Summon Project</a></li>
