--- a/user-interfaces/examples/signpost/www/index.html
+++ b/user-interfaces/examples/signpost/www/index.html
@@ -30,34 +30,41 @@
           <rect width="100%" height="100%" fill="url(#a)"/>
         </mask>
       </defs>
+      <!-- POST -->
       <path fill="url(#b)" mask="url(#c)" d="M215 0h70v700h-70z"/>
-      <rect fill="url(#d)" height="670" width="470" ry="13" rx="13" x="15" y="15" opacity=".95"/>
-      <path fill="rgba(0,0,0,.7)" d="M210 315v17h6v26h-6v17h30v-17h-6v-17l16 24 16-24v17h-6v17h30v-17h-6v-26h6v-17h-24l-16 24-16-24h-24z"/>
-      <text fill="rgba(0,0,0,.7)" text-anchor="middle" alignment-baseline="central" x="250" y="385">SIGNPOST</text>
+      <!-- SIGN -->
+      <rect fill="url(#d)" stroke="rgba(255,255,255,.3)" height="670" width="470" ry="13" rx="13" x="15" y="15" opacity=".95"/>
+      <path fill="rgba(255,255,255,.7)" d="M210 315v17h6v26h-6v17h30v-17h-6v-17l16 24 16-24v17h-6v17h30v-17h-6v-26h6v-17h-24l-16 24-16-24h-24z"/>
+      <text fill="rgba(255,255,255,.7)" text-anchor="middle" alignment-baseline="central" x="250" y="385">SIGNPOST</text>
+      <!-- NUTS & BOLTS -->
+      <path fill="url(#b)" d="M257 42h-14l-7-12 7-12h14l7 12z"/>
+      <circle fill="url(#b)" stroke="#555" r="7" cx="250" cy="30"/>
+      <path fill="url(#b)" d="M257 682h-14l-7-12 7-12h14l7 12z"/>
+      <circle fill="url(#b)" stroke="#555" r="7" cx="250" cy="670"/>
       <!-- MODULE 0 -->
       <rect fill="rgba(128,200,225,.2)" height="130" width="130" ry="13" rx="13" x="60" y="60"/>
-      <text fill="rgba(0,0,0,.7)" text-anchor="middle" alignment-baseline="central" x="125" y="125">MODULE 0</text>
+      <text fill="rgba(255,255,255,.7)" text-anchor="middle" alignment-baseline="central" x="125" y="125">MODULE 0</text>
       <!-- MODULE 1 -->
       <rect fill="rgba(128,200,225,.2)" height="130" width="130" ry="13" rx="13" x="310" y="60"/>
-      <text fill="rgba(0,0,0,.7)" text-anchor="middle" alignment-baseline="central" x="375" y="125">MODULE 1</text>
+      <text fill="rgba(255,255,255,.7)" text-anchor="middle" alignment-baseline="central" x="375" y="125">MODULE 1</text>
       <!-- MODULE 2 -->
       <rect fill="rgba(128,200,225,.2)" height="130" width="130" ry="13" rx="13" x="60" y="210"/>
-      <text fill="rgba(0,0,0,.7)" text-anchor="middle" alignment-baseline="central" x="125" y="275">MODULE 2</text>
+      <text fill="rgba(255,255,255,.7)" text-anchor="middle" alignment-baseline="central" x="125" y="275">MODULE 2</text>
       <!-- CONTROL -->
       <rect fill="rgba(128,200,225,.2)" height="130" width="130" ry="13" rx="13" x="310" y="210"/>
-      <text fill="rgba(0,0,0,.7)" text-anchor="middle" alignment-baseline="central" x="375" y="275">CONTROL</text>
+      <text fill="rgba(255,255,255,.7)" text-anchor="middle" alignment-baseline="central" x="375" y="275">CONTROL</text>
       <!-- POWER -->
       <rect fill="rgba(128,200,225,.2)" height="130" width="130" ry="13" rx="13" x="60" y="360"/>
-      <text fill="rgba(0,0,0,.7)" text-anchor="middle" alignment-baseline="central" x="125" y="425">POWER</text>
+      <text fill="rgba(255,255,255,.7)" text-anchor="middle" alignment-baseline="central" x="125" y="425">POWER</text>
       <!-- MODULE 5 -->
       <rect fill="rgba(128,200,225,.2)" height="130" width="130" ry="13" rx="13" x="310" y="360"/>
-      <text fill="rgba(0,0,0,.7)" text-anchor="middle" alignment-baseline="central" x="375" y="425">MODULE 5</text>
+      <text fill="rgba(255,255,255,.7)" text-anchor="middle" alignment-baseline="central" x="375" y="425">MODULE 5</text>
       <!-- MODULE 6 -->
       <rect fill="rgba(128,200,225,.2)" height="130" width="130" ry="13" rx="13" x="60" y="510"/>
-      <text fill="rgba(0,0,0,.7)" text-anchor="middle" alignment-baseline="central" x="125" y="575">MODULE 6</text>
+      <text fill="rgba(255,255,255,.7)" text-anchor="middle" alignment-baseline="central" x="125" y="575">MODULE 6</text>
       <!-- MODULE 7 -->
       <rect fill="rgba(128,200,225,.2)" height="130" width="130" ry="13" rx="13" x="310" y="510"/>
-      <text fill="rgba(0,0,0,.7)" text-anchor="middle" alignment-baseline="central" x="375" y="575">MODULE 7</text>
+      <text fill="rgba(255,255,255,.7)" text-anchor="middle" alignment-baseline="central" x="375" y="575">MODULE 7</text>
     </svg>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 700">
       <defs>
