--- a/user-interfaces/examples/signpost/www/index.html
+++ b/user-interfaces/examples/signpost/www/index.html
@@ -5,6 +5,8 @@
     <style>
       html, body { height:100%; margin:0; padding:0; background:url(img/bg.jpg) center center / cover; overflow:hidden; }
       svg { max-height:100%; max-width:100%; font-family: monospace; display:inline-block; margin-bottom:-5px; }
+      b {font-size:10px; font-weight:normal;}
+      .mod { height:90%; width:90%; padding:5%; text-align:center; color:rgba(255,255,255,.7); background:rgba(128,200,225,.2); border-radius:13px;}
     </style>
     <summon request="bluetooth" />
   </head>
@@ -41,30 +43,31 @@
       <circle fill="url(#b)" stroke="#555" r="7" cx="250" cy="30"/>
       <path fill="url(#b)" d="M257 682h-14l-7-12 7-12h14l7 12z"/>
       <circle fill="url(#b)" stroke="#555" r="7" cx="250" cy="670"/>
-      <!-- MODULE 0 -->
-      <rect fill="rgba(128,200,225,.2)" height="130" width="130" ry="13" rx="13" x="60" y="60"/>
-      <text fill="rgba(255,255,255,.7)" text-anchor="middle" alignment-baseline="central" x="125" y="125">MODULE 0</text>
-      <!-- MODULE 1 -->
-      <rect fill="rgba(128,200,225,.2)" height="130" width="130" ry="13" rx="13" x="310" y="60"/>
-      <text fill="rgba(255,255,255,.7)" text-anchor="middle" alignment-baseline="central" x="375" y="125">MODULE 1</text>
-      <!-- MODULE 2 -->
-      <rect fill="rgba(128,200,225,.2)" height="130" width="130" ry="13" rx="13" x="60" y="210"/>
-      <text fill="rgba(255,255,255,.7)" text-anchor="middle" alignment-baseline="central" x="125" y="275">MODULE 2</text>
-      <!-- CONTROL -->
-      <rect fill="rgba(128,200,225,.2)" height="130" width="130" ry="13" rx="13" x="310" y="210"/>
-      <text fill="rgba(255,255,255,.7)" text-anchor="middle" alignment-baseline="central" x="375" y="275">CONTROL</text>
-      <!-- POWER -->
-      <rect fill="rgba(128,200,225,.2)" height="130" width="130" ry="13" rx="13" x="60" y="360"/>
-      <text fill="rgba(255,255,255,.7)" text-anchor="middle" alignment-baseline="central" x="125" y="425">POWER</text>
-      <!-- MODULE 5 -->
-      <rect fill="rgba(128,200,225,.2)" height="130" width="130" ry="13" rx="13" x="310" y="360"/>
-      <text fill="rgba(255,255,255,.7)" text-anchor="middle" alignment-baseline="central" x="375" y="425">MODULE 5</text>
-      <!-- MODULE 6 -->
-      <rect fill="rgba(128,200,225,.2)" height="130" width="130" ry="13" rx="13" x="60" y="510"/>
-      <text fill="rgba(255,255,255,.7)" text-anchor="middle" alignment-baseline="central" x="125" y="575">MODULE 6</text>
-      <!-- MODULE 7 -->
-      <rect fill="rgba(128,200,225,.2)" height="130" width="130" ry="13" rx="13" x="310" y="510"/>
-      <text fill="rgba(255,255,255,.7)" text-anchor="middle" alignment-baseline="central" x="375" y="575">MODULE 7</text>
+      <!-- MODULES -->
+      <foreignobject width="130" height="130" x="60" y="60">
+        <div class="mod"><b>MODULE 0</b><br/>Audio Frequency<div id="mod0"></div></div>
+      </foreignobject>
+      <foreignobject width="130" height="130" x="310" y="60">
+        <div class="mod"><b>MODULE 1</b><br/>Microwave Radar<div id="mod1"></div></div>
+      </foreignobject>
+      <foreignobject width="130" height="130" x="60" y="210">
+        <div class="mod"><b>MODULE 2</b><br/>Ambient Sensors<div id="mod2"></div></div>
+      </foreignobject>
+      <foreignobject width="130" height="130" x="310" y="210">
+        <div class="mod"><b>CONTROL</b><div id="mod3"></div></div>
+      </foreignobject>
+      <foreignobject width="130" height="130" x="60" y="360">
+        <div class="mod"><b>POWER</b><div id="mod4"></div></div>
+      </foreignobject>
+      <foreignobject width="130" height="130" x="310" y="360">
+        <div class="mod"><b>MODULE 5</b><br/>2.4GHz RF<div id="mod5"></div></div>
+      </foreignobject>
+      <foreignobject width="130" height="130" x="60" y="510">
+        <div class="mod"><b>MODULE 6</b><br/>GPS<div id="mod6"></div></div>
+      </foreignobject>
+      <foreignobject width="130" height="130" x="310" y="510">
+        <div class="mod"><b>MODULE 7</b><div id="mod7"></div></div>
+      </foreignobject>
     </svg>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 700">
       <defs>
@@ -79,6 +82,7 @@
       </defs>
       <path fill="url(#b)" mask="url(#c)" d="M215-20h70v700h-70z"/>
     </svg>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
   </body>
 </html>
