--- a/user-interfaces/examples/signpost/www/index.html
+++ b/user-interfaces/examples/signpost/www/index.html
@@ -4,14 +4,14 @@
     <title>Signpost</title>
     <style>
       html, body { height:100%; margin:0; padding:0; background:url(img/bg.jpg) center center / cover; overflow:hidden; }
-      svg { max-height:100%; max-width:100%; font-family: monospace; display:inline-block; margin-bottom:-5px; fill:rgba(0,0,0,.5); }
+      svg { max-height:200%; max-width:100%; font-family: monospace; display:inline-block; margin-bottom:-5px; fill:rgba(0,0,0,.5); }
       b {font-size:10px; font-weight:normal;}
       .mod { height:90%; width:90%; padding:5%; text-align:center; color:rgba(255,255,255,.7); background:rgba(128,200,225,.2); border-radius:13px;}
     </style>
     <summon request="bluetooth" />
   </head>
   <body>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 700">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 1400">
       <defs>
         <linearGradient id="d" x1="1" x2="0" y2="1">
           <stop offset="10%" stop-color="#159"/>
@@ -33,7 +33,7 @@
         </mask>
       </defs>
       <!-- POST -->
-      <path fill="url(#b)" mask="url(#c)" d="M215 0h70v700h-70z"/>
+      <path fill="url(#b)" mask="url(#c)" d="M215 0h70v1400h-70z"/>
       <!-- SIGN -->
       <rect fill="url(#d)" stroke="rgba(255,255,255,.3)" height="670" width="470" ry="13" rx="13" x="15" y="15" opacity=".95"/>
       <path fill="rgba(255,255,255,.7)" d="M210 315v17h6v26h-6v17h30v-17h-6v-17l16 24 16-24v17h-6v17h30v-17h-6v-26h6v-17h-24l-16 24-16-24h-24z"/>
@@ -45,7 +45,7 @@
       <circle fill="url(#b)" stroke="#555" r="7" cx="250" cy="670"/>
       <!-- MODULES -->
       <foreignobject width="130" height="130" x="60" y="60">
-        <div class="mod"><b>MODULE 0</b><br/>Audio Frequency<div id="mod0"></div></div>
+        <div class="mod"><b>MODULE 0</b><br/>Audio Frequency<svg id="mod0"></svg></div>
       </foreignobject>
       <foreignobject width="130" height="130" x="310" y="60">
         <div class="mod"><b>MODULE 1</b><br/>Microwave Radar<div id="mod1"></div></div>
@@ -60,27 +60,14 @@
         <div class="mod"><b>POWER</b><div id="mod4"></div></div>
       </foreignobject>
       <foreignobject width="130" height="130" x="310" y="360">
-        <div class="mod"><b>MODULE 5</b><br/>2.4GHz RF<div id="mod5"></div></div>
+        <div class="mod"><b>MODULE 5</b><br/>2.4GHz RF<svg id="mod5"></svg></div>
       </foreignobject>
       <foreignobject width="130" height="130" x="60" y="510">
-        <div class="mod"><b>MODULE 6</b><br/>GPS<div id="mod6"></div></div>
+        <div class="mod"><b>MODULE 6</b><br/>GPS<svg id="mod6"></svg></div>
       </foreignobject>
       <foreignobject width="130" height="130" x="310" y="510">
         <div class="mod"><b>MODULE 7</b><div id="mod7"></div></div>
       </foreignobject>
-    </svg>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 700">
-      <defs>
-        <pattern id="a" x="215" y="30" width="70" height="40" patternUnits="userSpaceOnUse">
-          <path fill="#fff" d="M0 0h70v40H0z"/>
-          <circle fill="#999" cx="35" cy="20" r="9"/>
-          <circle cx="35" cy="20" r="7"/>
-        </pattern>
-        <mask id="c">
-          <rect width="100%" height="100%" fill="url(#a)"/>
-        </mask>
-      </defs>
-      <path fill="url(#b)" mask="url(#c)" d="M215-20h70v700h-70z"/>
     </svg>
     <script src="https://d3js.org/d3.v3.min.js"></script>
     <script src="http://d3js.org/topojson.v1.min.js"></script>
